# clap_autocomplete

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: main.yml
src/: lib.rs
