[package]
name = "clap_autocomplete"
description = "Easy to integrate shell completion for Clap. Finds the user's shell and puts completion files in the appropriate locations."
# Remember to add to the changelog and versions information in README.
version = "0.2.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Icelk/clap_autocomplete"
repository = "https://github.com/Icelk/clap_autocomplete"
license = "MIT OR Apache-2.0"
keywords = ["cli", "bash", "clap", "completion", "fish"]
categories = ["command-line-interface"]

[dependencies]
clap = { version = ">= 3.1, < 4", default-features = false }
clap_complete = ">= 3.1, < 5"
query-shell = { version = "0.2" }
xdg = "2.4"

[dev-dependencies]
clap = { version = ">= 3.1, < 4", features = ["cargo"] }
