[package]
name = "clap_autocomplete"
description = "Easy to integrate shell completion for Clap. Finds the user's shell and puts completion files in the appropriate locations."
# Remember to add to the changelog and versions information in README.
version = "0.4.2"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Icelk/clap_autocomplete"
repository = "https://github.com/Icelk/clap_autocomplete"
license = "MIT OR Apache-2.0"
keywords = ["cli", "bash", "clap", "completion", "fish"]
categories = ["command-line-interface"]

[dependencies]
clap = { version = "4", default-features = false }
clap_complete = "4"
query-shell = { version = "0.3" }
xdg = "3.0"

[dev-dependencies]
clap = { version = "4", features = ["cargo"] }
